--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vueShiptTarget",
+  "name": "vueShiptExercise",
   "version": "1.0.0",
   "description": "My swell Nuxt.js project",
   "author": "pogithub",
